@@ -929,29 +929,18 @@ function config_upgrade() {
 	/* Convert language setting. */
 	if ($config['version'] === "2.6") {
 		$language = array(
-			"Albanian" => "sq",
 			"Bulgarian" => "bg",
-			"Czech" => "cs",
-			"Danish" => "da",
 			"Dutch" => "nl",
 			"English" => "en_US",
 			"French" => "fr",
 			"German" => "de",
 			"Greek" => "el",
-			"Hungarian" => "hu",
 			"Italian" => "it",
 			"Japanese" => "ja",
-			"Latvian" => "lv",
-			"Norwegian (Bokmal)" => "no_NB",
-			"Polish" => "pl",
-			"Portuguese" => "pt",
 			"Romanian" => "ro",
 			"Russian" => "ru",
-			"Slovak" => "sk",
-			"Slovenian" => "sl",
 			"SimplifiedChinese" => "zh_CN",
 			"Spanish" => "es",
-			"Swedish" => "sv",
 			"TraditionalChinese" => "zh_TW"
 		);
 
@@ -1941,6 +1930,16 @@ function config_upgrade() {
 		}
 
 		$config['version'] = "8.6";
+	}
+
+	/* Convert 8.6 -> 8.7 */
+	/* Change locale name */
+	if ($config['version'] === "8.6") {
+		if ($config['system']['language'] === "no_NB") {
+			$config['system']['language'] = "nb";
+		}
+
+		$config['version'] = "8.7";
 	}
 
 	write_config();
