@@ -51,7 +51,7 @@ $g = array(
 	"www_path" => "/usr/local/www",
 	"xml_rootobj" => "freenas",
 	"debug" => false,
-	"latest_config" => "8.6",
+	"latest_config" => "8.7",
 	"nopccard_platforms" => array("wrap", "net48xx"),
 	"wireless_regex" => "/^(ndis|wi|ath|an|ral|ural|wai|iwi|awi|wlan|ipw|wpi|rum|arl|zyd)/",
 	"default_passwd" => "freenas",
@@ -77,7 +77,7 @@ $g_languages = array (
 	"hu"    => array("codeset" => "UTF-8", "desc" => gettext("Hungarian")),
 	"it"    => array("codeset" => "UTF-8", "desc" => gettext("Italian")),
 	"ja"    => array("codeset" => "UTF-8", "desc" => gettext("Japanese")),
-	"no_NB" => array("codeset" => "UTF-8", "desc" => gettext("Norwegian (Bokmal)")),
+	"nb"    => array("codeset" => "UTF-8", "desc" => gettext("Norwegian (Bokmal)")),
 	"pl"    => array("codeset" => "UTF-8", "desc" => gettext("Polish")),
 	"pt"    => array("codeset" => "UTF-8", "desc" => gettext("Portuguese")),
 	"ro"    => array("codeset" => "UTF-8", "desc" => gettext("Romanian")),
